--- a/style.css
+++ b/style.css
@@ -14,8 +14,17 @@ html {
   overflow-x: auto;
 }
 
-.hide-modal {
-  display: none !important;
+/* Propiedades iniciales del modal */
+.modal {
+  opacity: 0;
+  transform: scale(0.8);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+/* Propiedades del modal cuando se muestra */
+.modal.show {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .modal {
