--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ html {
   overflow-x: auto;
 }
 
+.loader {
+  text-align: center;
+}
+
 .modal {
   display: flex;
   justify-content: center;
@@ -31,9 +35,45 @@ html {
 }
 
 .modal-bg {
-  width: 30%;
+  /* width: 30%; */
   background-color: white;
   border-radius: 5px;
   padding: 1rem;
   box-shadow: 0px 0px 5px 0px rgb(121, 119, 119);
 }
+
+/*
+=============== 
+FAB animation
+===============
+*/
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+.fadeInShake {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards,
+              shake 0.82s cubic-bezier(.36, .07, .19, .97) 1s both;
+}
+
